# HomeAssistant_MCP

./: CHANGELOG.md  README.md  hacs.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
custom_components/homeassistant_mcp/: __init__.py  config_flow.py  const.py  discovery.py  frontend_panels.py  http.py  lovelace_mcp_api_v1.json  lovelace_resources.py  managed.py  manifest.json  native_lovelace.py  runtime.py  template_sensors.py
custom_components/homeassistant_mcp/lovelace/: __init__.py  card_helpers.py  errors.py  patch.py  repository.py  serialization.py  validation.py
custom_components/homeassistant_mcp/mcp/: completions.py  prompts.py  resources.py  schema.py  server.py  transport.py
custom_components/homeassistant_mcp/translations/: en.json
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/api/: configuration.md  overview.md  tools.md
docs/guides/: getting-started.md  home-assistant-installation.md  opencode-integration.md  security-model.md
lru/: __init__.py
tests/: conftest.py  test_api_v1_schema.py  test_builtin_completions.py  test_builtin_prompts.py  test_builtin_resources.py  test_capability_registries.py  test_card_helpers.py  test_frontend_panels.py  test_http_view.py  test_lovelace_resources.py  test_metadata.py  test_native_lovelace.py  test_patch.py  test_repository.py  test_schema_validation.py  test_serialization.py  test_template_sensors.py  test_tool_registry.py  test_transport.py
tests/components/homeassistant_mcp/: test_config_flow.py  test_http.py  (+2 more)
