[project]
name = "homeassistant-mcp"
version = "0.1.0"
description = "Home Assistant MCP integration for Lovelace dashboard authoring"
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
  "mcp==1.26.0",
  "pytest==9.0.0",
  "pytest-homeassistant-custom-component==0.13.316",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.unittest]
start-directory = "tests"
pattern = "test_*.py"
